# clack

./: Cargo.toml  flake.nix  index.html
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1pb4w7a1plrkih5a0na6sqdmly7c99vw-source
src/: lib.rs  main.rs
tests/: clack.rs
