[package]
name = "clack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
web-sys = { version = "0.3.69", features = ["console"] }
web-time = { version = "1.1.0", features = ["serde"] }
yew = { version = "0.21.0", features = ["csr"] }

[build]
rustflags = [ "-C linker=lld" ]
